# BrickBreakerVST

./: .gitignore  BrickBreaker.jucer  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  licence.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
